<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="btn_verdadeiro">Verdadeiro</string>
    <string name="btn_falso">Falso</string>
    <string name="btn_next">Próximo</string>
    <string name="btn_prev">Anterior</string>
    <string name="correto_toast">Você acertou!</string>
    <string name="incorreto_toast">Você errou!</string>
    <string name="pontuacao">Pontuação</string>
    <string name="perguntas_restantes">Perguntas restantes: </string>
    <string name="quantidade">10</string>

    <!-- Questaotoes do GeoQuiz -->
    <string name="pergunta1">A cidade de Campina Grande fica localizado no estado da Paraíba?</string>
    <string name="pergunta2">A floresta Amazônica passa por 8 estados?</string>
    <string name="pergunta3">O estado do Amapá faz fronteira com dois estados?</string>
    <string name="pergunta4">A cidade do Rio de Janeiro já foi a capital do Brasil?</string>
    <string name="pergunta5">Pernambuco é o segundo maior estado em território do Nordeste?</string>
    <string name="pergunta6">As cataratas do rio Iguaçu é um conjunto de 275 quedas de água?</string>
    <string name="pergunta7">A cidade de São Paulo surgiu como missão jesuítica em janeiro de 1554?</string>
    <string name="pergunta8">Recife é a capital mais antiga do Brasil?</string>
    <string name="pergunta9">A região do centro-oeste é formada por 4 estados?</string>
    <string name="pergunta10">A primeira cidade de Minas Gerais foi Ouro Preto?</string>

    <!-- Acrecentando GeoQuiz4 -->
    <string name="aviso">Tem certeza que quer fazer isso?</string>
    <string name="btn_mostrar_resposta">Mostrar resposta</string>
    <string name="btn_cheat">Trapacear!</string>
    <string name="jugamento_toast">Trapacear é errado.</string>
</resources>
